--- a/Price.html
+++ b/Price.html
@@ -1,1 +1,222 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pricing | Karan Shop</title>
 
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, sans-serif;
+    }
+
+    body {
+      background: #f5f5f5;
+    }
+
+    /* ---------- HEADER ---------- */
+    header {
+      background: #111;
+      color: #fff;
+      padding: 15px;
+    }
+
+    .nav {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    .logo {
+      font-size: 22px;
+      font-weight: bold;
+    }
+
+    nav ul {
+      display: flex;
+      list-style: none;
+      gap: 20px;
+    }
+
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-size: 16px;
+    }
+
+    /* ---------- HERO ---------- */
+    .hero {
+      background: #0d6efd;
+      color: white;
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .hero h1 {
+      font-size: 32px;
+      margin-bottom: 10px;
+    }
+
+    .hero p {
+      font-size: 18px;
+    }
+
+    /* ---------- PRICING ---------- */
+    .container {
+      max-width: 1200px;
+      margin: auto;
+      padding: 40px 15px;
+    }
+
+    .pricing {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+
+    .price-card {
+      background: white;
+      width: 30%;
+      padding: 25px;
+      border-radius: 10px;
+      text-align: center;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    .price-card h3 {
+      font-size: 22px;
+      margin-bottom: 10px;
+      color: #0d6efd;
+    }
+
+    .price {
+      font-size: 28px;
+      font-weight: bold;
+      margin: 15px 0;
+    }
+
+    .price-card ul {
+      list-style: none;
+      margin: 15px 0;
+    }
+
+    .price-card ul li {
+      margin: 8px 0;
+      color: #555;
+    }
+
+    .price-card button {
+      background: #0d6efd;
+      color: white;
+      border: none;
+      padding: 12px 20px;
+      border-radius: 5px;
+      cursor: pointer;
+      margin-top: 15px;
+    }
+
+    /* ---------- FOOTER ---------- */
+    footer {
+      background: #111;
+      color: #fff;
+      text-align: center;
+      padding: 15px;
+      margin-top: 40px;
+    }
+
+    /* ---------- RESPONSIVE ---------- */
+    @media (max-width: 768px) {
+      nav ul {
+        flex-direction: column;
+        gap: 10px;
+      }
+
+      .pricing {
+        flex-direction: column;
+      }
+
+      .price-card {
+        width: 100%;
+      }
+
+      .hero h1 {
+        font-size: 24px;
+      }
+    }
+  </style>
+</head>
+<body>
+
+  <!-- HEADER -->
+  <header>
+    <div class="nav">
+      <div class="logo">Karan Shop</div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="service.html">Services</a></li>
+          <li><a href="price.html">Pricing</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <!-- HERO -->
+  <section class="hero">
+    <h1>Pricing Plans</h1>
+    <p>Choose the best plan that fits your needs</p>
+  </section>
+
+  <!-- PRICING SECTION -->
+  <section class="container">
+    <div class="pricing">
+
+      <div class="price-card">
+        <h3>Basic</h3>
+        <p class="price">₹999</p>
+        <ul>
+          <li>5 Products</li>
+          <li>Basic Support</li>
+          <li>Standard Delivery</li>
+        </ul>
+        <button>Choose Plan</button>
+      </div>
+
+      <div class="price-card">
+        <h3>Standard</h3>
+        <p class="price">₹1999</p>
+        <ul>
+          <li>15 Products</li>
+          <li>Priority Support</li>
+          <li>Fast Delivery</li>
+        </ul>
+        <button>Choose Plan</button>
+      </div>
+
+      <div class="price-card">
+        <h3>Premium</h3>
+        <p class="price">₹2999</p>
+        <ul>
+          <li>Unlimited Products</li>
+          <li>24/7 Support</li>
+          <li>Express Delivery</li>
+        </ul>
+        <button>Choose Plan</button>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>© 2025 Karan Shop | All Rights Reserved</p>
+  </footer>
+
+</body>
+  </html>
