--- a/service.html
+++ b/service.html
@@ -138,8 +138,8 @@
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="service.html">Services</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="price.html">Pricing</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </div>
