--- a/Price.html
+++ b/Price.html
@@ -156,14 +156,15 @@
   <header>
     <div class="nav">
       <div class="logo">Karan Shop</div>
-      <nav>
+    <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
           <li><a href="service.html">Services</a></li>
           <li><a href="price.html">Pricing</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
+        
     </div>
   </header>
 
